# ai-companion

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml
backend/: Cargo.toml  build.rs
backend/src/: character_card.rs  database.rs  dialogue_tuning.rs  llm.rs  long_term_mem.rs  main.rs  prompt.rs  vectordb.rs
docs/: api_docs.md
src/: App.scss  App.tsx  index.css  index.scss
src/components/: ChatWindow.tsx  Companion.tsx  Footer.tsx  MessageScroll.tsx  theme-provider.tsx
src/components/context/: companionContext.tsx  configContext.tsx  messageContext.tsx  userContext.tsx
src/components/editData/: EditData.tsx  EditDataPopup.tsx
src/components/interfaces/: CompanionData.tsx  Config.tsx  Message.tsx  MessagesInterface.tsx  NewMessage.tsx  UserData.tsx
src/components/message/: Message.tsx  MessageScroll.tsx
src/components/ui/: scroll-area.tsx  textarea.tsx
