[package]
name = "ai-companion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
serde = { version = "1.0.197", features = ["derive"] }
# candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.4.2", features = ["cuda"] }
