[package]
name = "ai-companion"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
winres = "0.1.12"

[dependencies]
actix-web = "4.5.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
rusqlite = { version = "0.31.0", features = ["bundled"] }
tantivy = "0.21.1"
# candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.4.2", features = ["cuda"] }
