[package]
name = "ai-companion"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
winres = "0.1.12"

[dependencies]
actix-web = "4.5.1"
futures-util = "0.3.30"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.119"
rusqlite = { version = "0.31.0", features = ["bundled", "chrono"] }
tantivy = "0.21.1"
chrono = "0.4.37"
png = "0.17.13"
base64 = "0.22.0"
rand = "0.8.5"
llm = { git = "https://github.com/rustformers/llm" , branch = "gguf" }

[features]
cublas = ["llm/cublas"]
clblast = ["llm/clblast"]
metal = ["llm/metal"]
